Minor spacing fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -369,7 +369,7 @@ ul.nav li {
     background-color: white;
     padding: 2px;
     padding-left: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding-right: 20px;
 }
 .articleTitle {
